--- a/customer_segments.html
+++ b/customer_segments.html
@@ -13542,7 +13542,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>0.68663782847
+<pre>0.717106286332
 </pre>
 </div>
 </div>
@@ -14954,7 +14954,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0502c319e8&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d7876cfd0&gt;</pre>
 </div>
 
 </div>
@@ -15376,9 +15376,9 @@ sample 1 是cluster 0，是个小百货店。</p>
 <ul>
 <li><p>我们可以通过改变派送周期A/B这个变量，根据客户订货退货的比例结果，决定那种对客户影响大，而改变客户策略。</p>
 </li>
-<li><p>对于segment0，例如小百货批发商，将对于所有派送服务从每周5天变为3天，经过2~3周的实验，查看有积极反馈的客户的数量。经过2~3周试验，由于该批发商的小百货多，而新鲜食品等少，可能派送时长变短，没有因为对新鲜食品的强烈时间要求而增加积极反馈，总体来说没什么影响，影响，所以，派送服务无需做任何改变。</p>
+<li><p>对于segment0，例如小百货批发商，将对于所有派送服务从每周5天变为3天，经过2~3周的实验，查看有积极反馈的客户的数量。经过2~3周试验，由于该批发商的小百货多，而新鲜食品等少，可能派送时长变短，没有因为对新鲜食品的强烈时间要求而增加积极反馈，总体来说没什么影响，所以，派送服务无需做任何改变。</p>
 </li>
-<li>对于segment1，例如是个批发鱼食品生鲜的多的商户，将对于所有派送服务从每周5天变为3天，经过2~3周的实验，查看有积极反馈的客户的数量。可能由于该商户的客户对于时间要求比较高，而大大增加了积极反馈的数量。客户退订服务没有增多，反而增加了很多新客户，那么，改为3天是个好方案。反之，将对于所有派送服务从每周3天变为5天，由于原来是5天派送服务，变为更长的送货周期，客户退订可能大大增加，那么，这种预设方案显然不合理，对客户影响大，建议取消这种方案。</li>
+<li>对于segment1，例如是个批发鱼食品生鲜的多的商户，将对于所有派送服务从每周5天变为3天，经过2~3周的实验，查看有积极反馈的客户的数量。可能由于该商户的客户对于时间要求比较高，而大大增加了积极反馈的数量。客户退订服务没有增多，反而增加了很多新客户，那么，改为3天是个好方案。反之，将对于所有派送服务从每周3天变为5天，由于原来是3天派送服务，变为更长的送货周期，客户退订可能大大增加，那么，这种预设方案显然不合理，对客户影响大，建议取消这种方案。</li>
 </ul>
 
 </div>
